# spyder_cpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: download_3rd_part_lib.cmake
resource/img_code_src/: img_code.qrc
resource/img_doc_src/: img_doc.qrc
spyder_cpp/: CMakeLists.txt
spyder_cpp/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
spyder_cpp/core/: CMakeLists.txt  logger.cpp
spyder_cpp/core/base/: color_system.h  palette.h  print_base.h
spyder_cpp/core/cli/: cli_option.cpp  cli_option.h
spyder_cpp/core/logger/: CMakeLists.txt  logger.h
spyder_cpp/util/: CMakeLists.txt
test/: CMakeLists.txt
test/test3rdPartLib/: CMakeLists.txt
test/test3rdPartLib/testCLI11/: CMakeLists.txt  testCLI11.cpp
test/test3rdPartLib/testNlohmannJson/: CMakeLists.txt  testNlohmannJson.cpp
test/test3rdPartLib/testSpdlog/: CMakeLists.txt  testSpdlog.cpp
